Thêm các chức năng và tối ưu